<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="追加" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- TextView for the Subject -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_subject" />

            <!-- EditText for the Subject -->
            <EditText
                android:id="@+id/editSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:hint="@string/hint_subject" />

            <!-- TextView for the Class Name -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_class_name" />

            <!-- EditText for the Class Name -->
            <EditText
                android:id="@+id/editClassRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:hint="@string/hint_class_name" />

            <!-- TextView for the Day of Week -->
            <androidx.constraintlayout.widget.Barrier
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barrierDirection="top" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_day_of_week" />

            <!-- Spinner for the Day of Week -->
            <Spinner
                android:id="@+id/spinnerDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:hint="@string/hint_day_of_week"
                android:entries="@array/day_of_week_options" />

            <!-- TextView for the Period -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_period" />

            <!-- Spinner for the Period -->
            <Spinner
                android:id="@+id/spinnerPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_period"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:entries="@array/period_options" />

            <!-- Button for adding data -->
            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_add_data" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="削除" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
